--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "Redis",
     "Login"
   ],
-  "author": "Cody Van De Mark",
+  "author": "Jacob Kemp-Schneider",
   "license": "Apache 2.0",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
